<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">


    <com.example.myapplication.VerticalSeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492" />

    <Button
        android:id="@+id/tap"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:background="@drawable/roundedbutton"
        android:text="@string/tap"
        app:layout_constraintBottom_toTopOf="@+id/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar" />

    <Button
        android:id="@+id/bn1m"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:background="@drawable/roundedbutton"
        android:text="@string/minus1"
        app:layout_constraintBottom_toTopOf="@+id/bn5m"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/count1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/count"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ToggleButton
        android:id="@+id/accent"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedbutton"
        android:textOff="@string/Off"
        android:textOn="@string/On"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/saveList" />

    <Button
        android:id="@+id/bn5p"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:background="@drawable/roundedbutton"
        android:text="@string/plus5"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bn10p" />

    <TextView
        android:id="@+id/count2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/count"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Button
        android:id="@+id/bn1p"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:background="@drawable/roundedbutton"
        android:text="@string/plus1"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bn5p" />

    <ToggleButton
        android:id="@+id/play"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:background="@drawable/roundedbutton"
        android:checked="false"
        android:clickable="true"
        android:ellipsize="none"
        android:textOff="@string/start"
        android:textOn="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar" />

    <Button
        android:id="@+id/bn5m"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:color = "#c4c4c4"
        android:background="@drawable/roundedbutton"
        android:text="@string/minus5"
        app:layout_constraintBottom_toTopOf="@+id/bn10m"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveList"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"

        android:layout_weight="1"
        android:background="@drawable/roundedbutton"
        android:text="@string/saveL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bn10p"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        android:background="@drawable/roundedbutton"
        android:text="@string/plus10"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/slash"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/tap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/bn10m"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="64dp"
        android:layout_weight="1"
        android:background="@drawable/roundedbutton"
        android:text="@string/minus10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:allowUndo="false"
        android:contextClickable="false"
        android:cursorVisible="false"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/accent"
        android:autofillHints="@string/check"
        tools:ignore="LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>